# SuspensePerception

./: .cursorignore  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  bentz.yaml  brewer.yaml  config.yaml  conftest.py  delatorre.yaml  env.yaml  gerrig.ipynb  gerrig.yaml  gerrig_together.yaml  haider_en.yaml  lee.yaml  lehne.yaml  lehne_together.yaml  mock_openai.py  pyproject.toml  pytest.txt  requirements.txt  stockemotions.yaml  table.ipynb  table_mse.ipynb  test.txt  tweet.yaml  wilmot.yaml
collected_data/20240825_203100_ecfe6456/: combined_data.csv  summary_statistics.csv
collected_data/20240825_203411_5db1e5d2/: combined_data.csv
collected_data/20240825_204358_63fcd253/: combined_data.csv
data/: all_results.csv  delatorre_results.csv  gerrig_results.csv  parse_adversarial.ipynb
env/: env.yaml
experiments_archive/: README.md
experiments_archive/batched_experiments_refactor/: README.md
experiments_archive/prompt_engineering/: README.md  code_changes.patch  (+2 more)
notebooks/: gerrig.ipynb
research/: NOTES.md  TogetherAI_reference.md  delatorre.md  der_sandmann.md  gerrig1994.md  gerrig_alternative.md  gerrig_normal.md  lehne.md  lehne_de_to_en.md  lehne_human_results.xls  lehne_vis.ipynb  the_sandman.md  the_sandman_de.md  the_sandman_en.md  togetherAI_models.md  togetherAPI.md  together_models.md  visualize.ipynb
slurm/: autoslurm.sh  entrypoint.sh
src/: gerrig1994.py  gerrig_outputs.md  main.py  misc.py  thriller.py  together.py  utils.py
tests/: test_api.py  test_gerrig.py  test_misc.py  test_thriller.py  test_utils.py
(+17713 files in other folders)
