[project]
name = "suspense-perception"
version = "0.1.0"
description = "Suspense perception research project with adversarial testing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "together",
    "ruff",
    "pytest",
    "pandas",
    "pre-commit",
    "matplotlib",
    "seaborn",
    "tiktoken",
    "python-dotenv",
    "openai",
    "pyyaml",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
nlp = [
    "spacy",
    "nltk",
    "vaderSentiment",
]
ml = [
    "torch",
]
adversarial = [
    # "textattack",  # Currently incompatible with Python 3.13
    # "nlpaug",      # Depends on textattack
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
lint.ignore = ["E402"]